--- a/templates/index.html
+++ b/templates/index.html
@@ -283,7 +283,7 @@
                             <p class="text-gray-600">Sleek and durable</p>
                         </div>
                     </a>
-                    <a href="/hospital-window" class="card bg-white rounded-2xl shadow-lg overflow-hidden" data-category="window" data-prototype="hospitals">
+                    <a href="/ACP work" class="card bg-white rounded-2xl shadow-lg overflow-hidden" data-category="window" data-prototype="hospitals">
                         <img src="/static/images/ACP.jpg" alt="ACP Work" loading="lazy" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h4 class="font-semibold text-lg">ACP Work</h4>
